[package]
name = "sandy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.14.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
log = "0.4"
env_logger = "0.10"
